--- a/todo-app/src/static/main.css
+++ b/todo-app/src/static/main.css
@@ -167,7 +167,17 @@ section.heading p {
     margin-top: 0.8em;
 }
 
-.success_message {
-    color: var(--green);
+.success-message,
+.error-message {
     font-size: 1.2rem;
+    margin-bottom: 2rem;
+    padding: 1rem 0;
+}
+
+.success-message {
+    color: var(--green);
+}
+
+.error-message {
+    color: var(--bRed);
 }
