--- a/todo-app/src/templates/signin.html
+++ b/todo-app/src/templates/signin.html
@@ -18,12 +18,64 @@
         <link rel="stylesheet" href="/static/main.css" />
     </head>
     <body>
-        {% if success_message %}
-            <div class="success_message">
-                {{ success_message }}
-            </div>
-        {% endif %}
 
-        <h1>Sign In Page</h1>
+        <div class="container">
+            {% if success_message %}
+                <div class="success-message">
+                    {{ success_message }}
+                </div>
+            {% endif %}
+
+            {% if error_message %}
+                <div class="error-message">
+                    {{ error_message }}
+                </div>
+            {% endif %}
+
+            <!-- Heading -->
+            <section class="heading">
+                <h1 class="page-title">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    Sign In
+                </h1>
+                <p>Inform your credentials to access the dashboard</p>
+            </section>
+
+            <!-- Sign Up Form -->
+            <section class="form">
+                <form method="post" action="/users/signin">
+                    <!-- E-mail -->
+                    <div class="form-group">
+                        <label class="label-block">E-mail</label>
+                        <input
+                            name="email"
+                            type="email"
+                            class="form-text"
+                            placeholder="Enter an E-mail address"
+                            required
+                            value="{{ email }}"
+                        />
+                    </div>
+
+                    <!-- Password -->
+                    <div class="form-group">
+                        <label class="label-block">Password</label>
+                        <input
+                            name="password"
+                            type="password"
+                            class="form-text"
+                            placeholder="Enter a password for this e-mail"
+                            min="3"
+                            required
+                        />
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit" class="btn">Submit</button>
+                    </div>
+                </form>
+            </section>
+        </div><!--.container-->
+
     </body>
 </html>
