--- a/todo-app/src/templates/signup.html
+++ b/todo-app/src/templates/signup.html
@@ -26,7 +26,7 @@
                     <i class="fa-solid fa-right-to-bracket"></i>
                     Sign Up
                 </h1>
-                <p>Inform your credentials to access the dashboard</p>
+                <p>Provide some information to register a new user</p>
             </section>
 
             <!-- Sign Up Form -->
