--- a/todo-app/src/templates/error.html
+++ b/todo-app/src/templates/error.html
@@ -1,12 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Toda App - Error</title>
-  </head>
-  <body>
+{% extends "layout.html" %}
+
+{% block content %}
     <h1>Error</h1>
     <p>{{ error_message }}</p>
-  </body>
-</html>
+{% endblock %}
