--- a/todo-app/src/templates/home.html
+++ b/todo-app/src/templates/home.html
@@ -1,11 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Toda App</title>
-  </head>
-  <body>
+{% extends "layout.html" %}
+
+{% block content %}
     <h1>Home Page</h1>
-  </body>
-</html>
+{% endblock %}
