--- a/todo-app/src/templates/signup.html
+++ b/todo-app/src/templates/signup.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}Sign Up{% endblock %}
+
 {% block content %}
     <!-- Heading -->
     <section class="heading">
