--- a/todo-app/src/templates/error.html
+++ b/todo-app/src/templates/error.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}Error{% endblock %}
+
 {% block content %}
     <h1>Error</h1>
     <p>{{ error_message }}</p>
