--- a/todo-app/src/templates/signin.html
+++ b/todo-app/src/templates/signin.html
@@ -1,18 +1,8 @@
 {% extends "layout.html" %}
 
+{% block title %}Sign In{% endblock %}
+
 {% block content %}
-    {% if success_message %}
-        <div class="success-message">
-            {{ success_message }}
-        </div>
-    {% endif %}
-
-    {% if error_message %}
-        <div class="error-message">
-            {{ error_message }}
-        </div>
-    {% endif %}
-
     <!-- Heading -->
     <section class="heading">
         <h1 class="page-title">
