--- a/todo-app/src/templates/home.html
+++ b/todo-app/src/templates/home.html
@@ -3,5 +3,97 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1>Home Page</h1>
+    <style>
+        .goals {
+            margin: 2rem 0;
+        }
+
+        .goals .goals-title {
+            color: var(--gray-500);
+            font-size: 2rem;
+            font-weight: 500;
+            padding: 1.2rem 0 1.2rem 0.3rem;
+        }
+
+        .goal {
+            background-color: var(--bDarkBlue);
+            color: var(--black);
+            margin: 0 0 1rem 0;
+            border: 0;
+            border-radius: var(--borderRadius);
+            padding: 1rem;
+            display: flex;
+            align-items: center;
+        }
+
+        .goal div {
+            flex: 1;
+            font-size: 1.1rem;
+            color: var(--green);
+            font-weight: 500;
+        }
+
+        .goal button {
+            background-color: var(--blue-100);
+            border: 0;
+            color: var(--gray-500);
+            padding: 1rem;
+            font-size: 0.9rem;
+        }
+
+        .goal i {
+            font-size: 0.8rem;
+        }
+    </style>
+
+    <!-- Heading -->
+    <section class="heading">
+        <h1 class="page-title">Welcome {{ session["user"]["name"] }}</h1>
+        <p>Goals Dashboard</p>
+    </section>
+
+    <!-- Add Goal Form -->
+    <section class="form">
+        <form method="post" action="/goals">
+            <div class="form-inline-group">
+                <input
+                    name="text"
+                    type="text"
+                    class="form-text"
+                    placeholder="What is your goal?"
+                    required
+                    min="3"
+                />
+                <button type="submit" class="btn">
+                    <i class="fa-solid fa-paper-plane"></i> Submit
+                </button>
+            </div>
+        </form>
+    </section>
+
+    <!-- List of Goals -->
+    {% if goals %}
+        <div class="goals">
+            <div class="goals-title">Goals</div>
+            <div class="goals-container">
+
+                {% for goal in goals %}
+                    <div class="goal">
+                        <div class="content">{{ goal.text }}</div>
+                        <form action="/goals/{{ goal.id }}" method="delete">
+                            <button class="btn">
+                                <i class="fa-solid fa-trash-can"></i> Delete
+                            </button>
+                        </form>
+                    </div>
+                {% endfor %}
+
+            </div>
+        </div>
+    {% else %}
+        <div class="goals">
+            <div class="goals-title">No goals to display</div>
+        </div>
+    {% endif %}
+
 {% endblock %}
